# veragent-mcp

./: .gitignore  README.md  pyproject.toml  server.json  test_client.py
veragent_mcp/: __init__.py  client.py  server.py
