[project]
name = "veragent-mcp"
version = "0.1.0"
description = "Veragent MCP server — check the trust/security score of MCP tools before installing them in Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sean Li" }]
keywords = ["mcp", "model-context-protocol", "security", "veragent", "claude", "trust"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://veragent.store"
Registry = "https://veragent.store/trust-registry"

[project.scripts]
veragent-mcp = "veragent_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["veragent_mcp"]
